--- a/ProyectoTablero.Servicios/ProyectoTablero.Servicios.csproj
+++ b/ProyectoTablero.Servicios/ProyectoTablero.Servicios.csproj
@@ -42,6 +42,7 @@
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Tablero.cs" />
         <Compile Include="Tarea.cs" />
+        <Compile Include="TareaEspecial.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
